# nouns

./: LICENSE  Makefile  README.md  example.py  pyproject.toml
nouns/: __init__.py
nouns/builtin_templates/: mapping.html  mappingrow.html  table.html  tablecell.html  tableheading.html  tablerow.html  text.html  thingy.html
nouns/css/: __init__.py
nouns/templates/: __init__.py
tests/: conftest.py  test_basic_templating.py  test_human.py  test_prepro.py
