[tool.poetry]
name = "nouns"
version = "0.1.0"
description = "Data-driven templating"
authors = ["Robert Lechte <robert.lechte@dpc.vic.gov.au>"]
readme = 'README.md'

[tool.poetry.dependencies]
python = ">=3.8"
results = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
results = "*"
isort = "*"
flake8 = "*"
pytest-cov = "*"
black = ">=19.10b0"

[tool.poetry.scripts]
nouns = 'nouns:do_command'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88
